--- a/08.Горутины и каналы/02.Каналы.ipynb
+++ b/08.Горутины и каналы/02.Каналы.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "Два канала одинакового типа можно сравнивать между собой, используя ==. Каналы считаются **равными**, если они ссылаются на одну и ту же структуру данных. Канал также можно сравнивать с nil.\n",
     "\n",
-    "Каналы поддерживают две основополагающие операции: **отправка**(send) и **получение**(receive). Вместе эти две операции называют взаимодействиями(communications). Операция отправки посылает значение из одной горутины в другую, которая извлекает это значение с помощью операции получения. Обе эти операции записываются с помощью **<-**. При отправке <- отделяёт канал от значения, при получении <- стоит слева от канала:"
+    "Каналы поддерживают две основополагающие операции: **отправка**(send) и **получение**(receive). Вместе эти две операции называют взаимодействиями(communications). Операция отправки посылает значение из одной горутины в другую, которая извлекает это значение с помощью операции получения. Обе эти операции записываются с помощью **<-**. При отправке <- отделяет канал от значения, при получении <- стоит слева от канала:"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Из одного канала могут извлекать данные несколько горутин, также же как и несколько горутин могут отправлять значения в него.\n",
+    "**Из одного канала могут извлекать данные несколько горутин, также же как и несколько горутин могут отправлять в него значения.**\n",
     "\n",
     "Канал, который создаётся простым вызовом make, называется **небуферизированным**(unbuffered) каналом, но make поддерживает и необъязательный второй целочисленный аргумент, который называют **вместительностью**(capacity) канала. Если вместительность не равна 0, то создаётся **буферизированный** канал:"
    ]
@@ -108,7 +108,7 @@
     "\n",
     "При обсуждении конкурентности когда мы говорим, что x случается до y, мы не только имеем в виду, что x произошло раньше во времени чем y, но и то, что такое поведение гарантировано. Когда x случается ни раньше и не позже чем y, мы говорим, что x **конкурентно с** y. Это необъязательно означает, что x и y произошли одновременно. Это означает, что мы не можем ничего предполагать о порядке происхождения этих событий.\n",
     "\n",
-    "Иногда можно увидеть код, в котором создаются каналы типом элементов которого является пустая структура struct{}:"
+    "Иногда можно увидеть код, в котором создаются каналы, типом элементов которого является пустая структура struct{}:"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Хотя название аргументов функций и намекают на предполагаемый способ использования каждого канала, ничто не запрещает функции squarer, например, отправить значение в канал in, хотя логически одна должна только получать из него значения. Для того чтобы **задокументировать и предотвратить** неправильное использование канала система типов Go поддерживает **однонаправленные каналы**, в которые можно только отправлять значения или только получать. Тип **chan<- int** это тип канала, в который можно только отправлять, а тип **<-chan int** это тип канала, из которого можно только что-то получать. Нарушение предполагаемого способа работы с каналом будут обнаружены на этапе компиляции. Также ошибкой компиляции будет попытка закрытия канала, из которого можно только получать значения.\n",
+    "Хотя название аргументов функций и намекают на предполагаемый способ использования каждого канала, ничто не запрещает функции squarer, например, отправить значение в канал in, хотя логически одна должна только получать из него значения. Для того чтобы **задокументировать и предотвратить** неправильное использование канала система типов Go поддерживает **однонаправленные каналы**, в которые можно только отправлять значения или только получать. Тип **chan<- int** это тип канала, в который можно только отправлять, а тип **<-chan int** это тип канала, из которого можно только что-то получать. Нарушения предполагаемого способа работы с каналом будут обнаружены на этапе компиляции. Также ошибкой компиляции будет попытка закрытия канала, из которого можно только получать значения.\n",
     "\n",
     "С учётом однонаправленных каналов, наш пример можно переписать так:"
    ]
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Операция отправки добавляет элемент в конец очереди, а операция получения извлекает элемент с её начала. Если очередь полностью заполнена, то операция отправки блокируется до момента пока какая-либо другая горутина не извлечёт значение из очереди. И наоборот, операция получения блокируется, если очередь пустая пока значения не будут отправлены в неё. В созданный нами канал можно отправлять до трёх значений без блокировки:"
+    "Операция отправки добавляет элемент в конец очереди, а операция получения извлекает элемент с её начала. Если очередь полностью заполнена, то операция отправки блокируется до момента пока какая-либо другая горутина не извлечёт значение из очереди. И наоборот, операция получения блокируется на пустой очереди пока в канал не будет что-то отправлено. В созданный нами канал можно отправлять до трёх значений без блокировки:"
    ]
   },
   {
@@ -406,6 +406,167 @@
     "Если попытаться ещё раз отправить значение в канал, то оно приведёт к блокировке. Если мы извлечём значение из канала, то он будет не пустым и не полностью заполненным. Тогда операция отправки или получения не приведёт к блокировке, т.е. эти операции могут быть выполнены без синхронизации между собой как это было в случае с небуферизированными каналами.\n",
     "\n",
     "Встроенная функция **cap** для каналов возвращает его вместительность, а **len** - текущий размер очереди значений."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Мультиплексирование с помощью select"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Рассмотрим следующую программу для обратного отсчёта перед запуском ракеты:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import (\n",
+    "\t\"fmt\"\n",
+    "\t\"time\"\n",
+    ")\n",
+    "\n",
+    "func main() {\n",
+    "\tfmt.Println(\"Commencing countdown.\")\n",
+    "\ttick := time.Tick(1 * time.Second)\n",
+    "\tfor countdown := 3; countdown > 0; countdown-- {\n",
+    "\t\tfmt.Println(countdown)\n",
+    "\t\t<-tick\n",
+    "\t}\n",
+    "\t// launch\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Функция time.Tick создаёт канал, в который с указанным интервалом записывается значение(timestamp), но нас интересует только сам факт поступления значения. По-правильному этот канал нужно закрывать по окончании работ с ним, но для наших демонстрационных целей мы пропустим этот шаг.\n",
+    "\n",
+    "Допустим теперь нам необходимо остановить отсчёт, если была нажата клавиша enter. Мы можем создать горутину, которая пытается вычитать значение из стандартного ввода и в случае успеха отправляет значение в канал cancel:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cancel := make(chan struct{})\n",
+    "go func() {\n",
+    "\tos.Stdin.Read(make([]byte, 1))\n",
+    "\tcancel <- struct{}{}\n",
+    "}()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь при каждой итерации цикла обратного отсчёта нам необходимо ждать поступления события в один из двух каналов: канал tick, если всё идёт нормально, и канал cancel, если запуск был отменён. Но мы **не можем одновременно** получать с двух каналов, т.к. попытка получить что-либо с любого из каналов приведёт к блокировке, а следовательно невозможности узнать, есть ли что-либо в другом канале. Для решения этой проблемы есть специальное выражение **select**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select {\n",
+    "case <-ch1:\n",
+    "    // ...\n",
+    "case x := <-ch2:\n",
+    "    // ...use x...\n",
+    "case ch3 <- y:\n",
+    "    // ...\n",
+    "default:\n",
+    "    // ...\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Это общий вид выражения select. Как и у switch'а, у него есть несколько ветвей выполнения и случай по-умолчанию defautl. Каждая ветвь представляет собой взаимодействие(communication), т.е. отправку или получение и блок кода, который нужно выполнить в этом случае. Операция получения может просто извлечь значение из канала или может присвоить его переменной, чтобы в дальнейшем можно было ссылаться на неё.\n",
+    "\n",
+    "select **ждёт** пока можно будет выполнить взаимодействие для какой-либо ветви, а затем выполняет это взаимодействие и при этом не будут выполнены взаимодействия в других ветвях. select без каких-либо ветвей, т.е. select{}, будет ждать бесконечно долго.\n",
+    "\n",
+    "Учитывая select наш пример можно переписать так:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import (\n",
+    "\t\"fmt\"\n",
+    "\t\"os\"\n",
+    "\t\"time\"\n",
+    ")\n",
+    "\n",
+    "func main() {\n",
+    "\tcancel := make(chan struct{})\n",
+    "\tgo func() {\n",
+    "\t\tos.Stdin.Read(make([]byte, 1))\n",
+    "\t\tcancel <- struct{}{}\n",
+    "\t}()\n",
+    "\n",
+    "\ttick := time.Tick(1 * time.Second)\n",
+    "\n",
+    "\tfmt.Println(\"Commencing countdown.\")\n",
+    "\tfor countdown := 3; countdown >= 0; countdown-- {\n",
+    "\t\tselect {\n",
+    "\t\tcase <-tick:\n",
+    "\t\t\tfmt.Println(countdown)\n",
+    "\t\tcase <-cancel:\n",
+    "\t\t\tfmt.Println(\"Launch canceled!\")\n",
+    "\t\t\treturn\n",
+    "\t\t}\n",
+    "\t}\n",
+    "\n",
+    "\tfmt.Println(\"Launch rocket!\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если несколько ветвей выражения select готовы к выполненую, то select выберет **случайным образом** одну из них.\n",
+    "\n",
+    "Иногда бывает необходимо получить или записать значение в канал, но **без блокирования** в случае, если операция не может быть выполнена сразу. select позволяет реализовать и такое поведение с помощью ветки **default**, в котором определяется что необходимо делать, если ни одна из других ветвей не может быть выполнена сразу. Следующее выражение получает значение из канала cancel, если в нём есть значение, в противном случае не происходит ничего:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select {\n",
+    "case <- cancel:\n",
+    "    fmt.Println(\"Launch canceled!\")\n",
+    "    return\n",
+    "default:\n",
+    "    // Ничего не делаем    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Нулевым** значением для канала является nil. Операции получения или отправления для nil канала блокируются навсегда."
    ]
   }
  ],
