--- a/10.Пакеты и go tool/01.Пакеты.ipynb
+++ b/10.Пакеты и go tool/01.Пакеты.ipynb
@@ -172,6 +172,36 @@
     "\n",
     "Каждое объявление import устанавливает зависимость между текущим и импортируемым пакетом. Команда go build выведет ошибку, если зависимости образуют цикл."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Пустые импорты"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если импортировать пакет, но не использовать какой-либо символ из этого пакета, то будет ошибка компиляции. Но иногда нам нужно импортировать пакет только для того, чтобы сработал побочный эффект импортирования: инициализировались всё переменные уровня пакета и выполнилась функция init. При этом чтобы избежать ошибки неиспользования какого-либо символа из пакета нам необходимо использовать переименующий импорт, где альтернативным именем будет _ - пустой идентификатор. Как обычно к пустому идентификатор никогда нельзя обращаться."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import _ \"image/png\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Такой вид импорта известен как **пустой импорт**(blank import). Пустые импорты наиболее часто используются для реализации механизма времени компиляции, с помощью которого основная программа может активировать или выключить дополнительный функционал."
+   ]
   }
  ],
  "metadata": {
