--- a/02.Структура программы/03.Переменные.ipynb
+++ b/02.Структура программы/03.Переменные.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "var *name* type = *expression*\n",
     "\n",
-    "Либо \"type\" либо \" = expression\" можно пропустить, но не оба сразу. Если \"type\" пропущен, то тип выводится из выражения-инициализатора. Если пропускается \" = expression\", то переменной присваивается **нулевое значение**(zero value) соответствующего типа. Для чисел он равен __0__, **false** для булевого типа, **\"\"** для строк и **nil** для интерфейсных и ссылочных типов(слайсы, указатели, словари, каналы, функции). Для агрегированных типов каждый элемент принимает нулевое значение. Механизм нулевых значений гарантирует инициализацию переменных известным значением, т.е. в Go отсутствует такое понятие, как неинициализированная переменная. Например, следующий когда выводит пустую строку, а не какой-либо мусор:"
+    "Либо \"type\" либо \" = expression\" можно пропустить, но не оба сразу. Если \"type\" пропущен, то тип выводится из выражения-инициализатора. Если пропускается \" = expression\", то переменной присваивается **нулевое значение**(zero value) соответствующего типа. Для чисел он равен __0__, **false** для булевого типа, **\"\"** для строк и **nil** для интерфейсных и ссылочных типов(слайсы, указатели, словари, каналы, функции). Для агрегированных типов каждый элемент принимает нулевое значение. Механизм нулевых значений гарантирует инициализацию переменных известным значением, т.е. в Go отсутствует такое понятие, как неинициализированная переменная. Например, в следующем коде s равно пустой строке, а не какому-либо мусору:"
    ]
   },
   {
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Указатель это переменная, которая хранит адрес переменной. С помощью указателя можно менять значение переменной косвенно(indirectly), т.е. не зная имя переменной. Работа указателей в Go очень похожа работу указателей в C: адрес переменной можно получить с помощью оператора __&__, а получить доступ к значению с помощью оператора разыменовывания(indirection)*****:"
+    "Указатель это переменная, которая хранит адрес переменной. С помощью указателя можно менять значение переменной косвенно(indirectly), т.е. не зная имя переменной. Работа указателей в Go очень похожа работу указателей в C: адрес переменной можно получить с помощью оператора __&__, а получить доступ к значению можно с помощью оператора разыменовывания(indirection)*****:"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В Go возвращение адреса локальной переменной, а затем дальнейшее обращение к этой переменной через указатель **не является ошибкой**. Сборщик мусора не уничтожит переменную, т.к. на неё указывает другая:"
+    "В Go возвращение адреса локальной переменной функции, а затем дальнейшее обращение к этой переменной через указатель **не является ошибкой**. Сборщик мусора не уничтожит переменную, т.к. на неё указывает другая:"
    ]
   },
   {
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Локальная переменная x внутри функции f должна быть создана в куче, т.к. после завершения выполнения функции, на наё всё ещё ссылается глобальная переменная global. Внутри функции g переменную y можно создать в стеке даже несмотря на то, что она создаётся используя встроенную функцию new. Эта переменная не выходит за рамки функции. Программист не может управлять тем, где именно будет выделена память для создаваемых им переменных. Но это и не нужно делать, т.к. сборщик мусора(garbage collector, или GC) на то и придуман, чтобы освободить разработчика от многих проблем работы с памятью."
+    "Локальная переменная x внутри функции f должна быть создана в куче, т.к. после завершения выполнения функции, на наё всё ещё ссылается глобальная переменная global. Внутри функции g переменная y может быт создана в стеке даже несмотря на то, что она создаётся используя встроенную функцию new. Эта переменная не выходит за рамки функции. Программист не может управлять тем, где именно будет выделена память для создаваемых им переменных. Но это и не нужно делать, т.к. сборщик мусора(garbage collector, или GC) на то и придуман, чтобы освободить разработчика от многих проблем работы с памятью."
    ]
   }
  ],
