--- a/02.Структура программы/06.Пакеты и файлы.ipynb
+++ b/02.Структура программы/06.Пакеты и файлы.ipynb
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для импорта пакета используется объявление **import**, после которого указывается путь до импортируемого пакета относительно предопределённых папок в системе. Одной из таких папок является папка $GOPATH/src, которая настраивается при первоначальной установке в системе Go. Другой папкой является GOROOT/src(узнать чему равен GOROOT можно, запустив команду **go env**)."
+    "Для импорта пакета используется объявление **import**, после которого указывается путь до импортируемого пакета относительно предопределённых папок в системе. Одной из таких папок является папка $GOPATH/src, которая настраивается при первоначальной установке Go в системе. Другой папкой является GOROOT/src(узнать чему равен GOROOT можно, запустив команду **go env**)."
    ]
   },
   {
@@ -185,11 +185,13 @@
    "metadata": {},
    "source": [
     "Если пакет состоит из нескольких .go файлов они инициализируется в том порядке, в котором они **подаются** на вход компилятору. Команда go **сортирует** .go файлы по имени перед запуском компилятора.\n",
-    "Когда необходимо инициализировать более более сложные переменные типа таблиц можно воспользоваться специальной функцией под названием **init**. Любой файл может содержать произвольное количество функций следующего вида:\n",
+    "Когда необходимо инициализировать более сложные переменные типа таблиц можно воспользоваться специальной функцией под названием **init**. Любой файл может содержать произвольное количество функций следующего вида:\n",
     "\n",
     "func init() { ... }\n",
     "\n",
-    "Эту функцию нельзя вызывать в явном виде, но во всём остальном она ничем не отличается от обычных функций. При запуске программы вызываются все функции init в порядке, в котором они объявлены внутри файла. Это действие выполняется для каждого файла. Пакеты инициализируются по очереди в порядке, в котором они импортируются. При этом сначала инициализируются зависимости: инициализация продвигается снизу вверх, пакет main инициализируется в последнюю очередь."
+    "Эту функцию нельзя вызывать в явном виде, но во всём остальном она ничем не отличается от обычных функций. При запуске программы вызываются все функции init в порядке, в котором они объявлены внутри файла. Это действие выполняется для каждого файла.\n",
+    "\n",
+    "Пакеты инициализируются по очереди в том порядке, в котором они импортируются. При этом сначала инициализируются зависимости: инициализация продвигается снизу вверх, пакет main инициализируется в последнюю очередь."
    ]
   }
  ],
