--- a/03.Простые типы данных/04.Строки.ipynb
+++ b/03.Простые типы данных/04.Строки.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "i и/или j можно опускать, только при этом значением по-умолчанию для i является 0, а для j - len(s):"
+    "i и/или j можно опускать, при этом значением по-умолчанию для i является 0, а для j - len(s):"
    ]
   },
   {
