--- a/03.Простые типы данных/05.Константы.ipynb
+++ b/03.Простые типы данных/05.Константы.ipynb
@@ -634,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как и для вещественных констант на все целочисленные значения помещаются в целочисленные переменные. Могут возникнуть две проблемы: либо значение слишком большое(или маленькое) или беззнаковой переменной присваивается отрицательное значение. Например, int8 может содержать значения от -128 до 127 включительно и значения, которые не входят в этот диапазон, не могут быть присвоены переменной такого типа:"
+    "Как и с вещественными константами не все целочисленные значения помещаются в целочисленные переменные. Могут возникнуть две проблемы: либо значение слишком большое(или маленькое) или беззнаковой переменной присваивается отрицательное значение. Например, int8 может содержать значения от -128 до 127 включительно и значения, которые не входят в этот диапазон, не могут быть присвоены переменной такого типа:"
    ]
   },
   {
