--- a/05.Функции/06.Variadic функции.ipynb
+++ b/05.Функции/06.Variadic функции.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Параметр nums внутрии функции sum является слайсом []int.  \n",
+    "Параметр nums внутри функции sum является слайсом []int.  \n",
     "Чтобы передать variadic функции аргументы, которые уже находятся в слайсе нужно указывать троеточие после аргумента:"
    ]
   },
