--- a/05.Функции/08.Panic и recover.ipynb
+++ b/05.Функции/08.Panic и recover.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Восстановление от паники можно использовать для выполнения какого-либо последнего действия перед завершением программы. Считается плохой практикой без явной необходимости восстанавливаться от паники, т.к. после паники значение переменных пакета редко бывает определённым. Восстановление от паники внутри пакета может быть хорошим способом обработки сложной ошибки, но в общем случае не нужно пытаться восстановиться от ошибки в другом пакете или функции, которую не контролируете. Публичное API должно возвращать ошибки в случае неудачи. Не от всех паник можно восстановиться: нехватка памяти вызовет завершение программы в любом случае с выводом сообщения."
+    "Восстановление от паники можно использовать для выполнения какого-либо последнего действия перед завершением программы. Считается плохой практикой без явной необходимости восстанавливаться от паники, т.к. после паники значения переменных пакета редко бывают определёнными. Восстановление от паники внутри пакета может быть хорошим способом обработки сложной ошибки, но в общем случае не нужно пытаться восстановиться от ошибки в другом пакете или функции, которую не контролируете. Публичное API должно возвращать ошибки в случае неудачи. Не от всех паник можно восстановиться: нехватка памяти вызовет завершение программы в любом случае с выводом сообщения."
    ]
   }
  ],
