--- a/07.Интерфейсы/01.Интерфейсы.ipynb
+++ b/07.Интерфейсы/01.Интерфейсы.ipynb
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Любой тип, который определяет метод Write именно с такой сигнатурой, которая определена в этом интерфейсе, удовлетворяет интерфейсу Writer, а значит, значения такого типа можно передать функции Fprintf. Именно так и работают функции Printf и Sprintf: Printf передаёт значение типа \\*os.File, а Sprintf - \\*bytes.Buffer. Оба этих типа удовлетворяют интерфейсу Writer(почему необходимо использовать именно указатели мы узнаем позже). Можно придумать и свой тип, который удовлетворяет Writer'у:"
+    "Любой тип, который определяет метод Write именно с такой сигнатурой, которая определена в этом интерфейсе, удовлетворяет интерфейсу Writer, а значит, значения такого типа можно передать функции Fprintf. Именно так и работают функции Printf и Sprintf: Printf передаёт значение типа \\*os.File, а Sprintf - \\*bytes.Buffer. Оба эти типа удовлетворяют интерфейсу Writer(почему необходимо использовать именно указатели мы узнаем позже). Можно придумать и свой тип, который удовлетворяет Writer'у:"
    ]
   },
   {
@@ -272,7 +272,7 @@
     ")\n",
     "\n",
     "var rwc io.ReadWriteCloser\n",
-    "rwc = os.Stdout         // Ошибки нет: *os.File определяет метод Write.\n",
+    "rwc = os.Stdout         // Ошибки нет: *os.File определяет методы Read, Write и Close.\n",
     "rwc = new(bytes.Buffer) // Есть ошибка: bytes.Buffer не определяет метод Close."
    ]
   },
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "От того что мы создали переменую типа пустого интерфейса и присвоили ей значение мы много не выиграли, т.к. у пустого интерфейса нет методов, а следовательно не можем ничего с ним сделать. Нам необходим способ вернуться обратно к тому значению, которые было присвоено интерфейсу. Мы рассмотрим как это можно сделать, используя **type assertion** в последующих главах."
+    "От того что мы создали переменую типа пустого интерфейса и присвоили ей значение мы много не выиграли, т.к. у пустого интерфейса нет методов, а следовательно не можем ничего с ним сделать. Нам необходим способ вернуться обратно к тому значению, которое было присвоено интерфейсу. Мы рассмотрим как это можно сделать, используя **type assertion** в последующих главах."
    ]
   }
  ],
