--- a/07.Интерфейсы/02.Значения интерфейсного типа.ipynb
+++ b/07.Интерфейсы/02.Значения интерфейсного типа.ipynb
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В Go всегда происходит инициализация переменных и интерфейсы не являются исключением. **Нулевое значение** интерфейса это - такое значение интерфейса, у которого компоненты динамического типа и динамического значения оба равны **nil**. \n",
+    "В Go всегда происходит инициализация переменных и интерфейсы не являются исключением. **Нулевое значение** интерфейса - это такое значение интерфейса, у которого компоненты динамического типа и динамического значения оба равны **nil**. \n",
     "\n",
     "Равенство значения интерфейса nil определяется на **основе динамического типа**: если динамический тип равен nil, то и значение интерфейса равно nil(т.е w равно nil) и наоборот. Проверить равенство значения интерфейса nil можно простым сравнением с nil:"
    ]
