--- a/07.Интерфейсы/04.Type assertion.ipynb
+++ b/07.Интерфейсы/04.Type assertion.ipynb
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В этом примере в случае case bool после того как мы уже точно знали, что динамический тип x равен bool, мы провели операцию type assertion, чтобы получить значение типа bool(в операторе if можно использовать только такие значения). Оператор type switch позволяет выполнить это действие один раз в самом начале и в каждом case'е операнд будет иметь такой тип, который используется в этом case'e. Но здесь есть и исключение: когда в case'е указано несколько типов, то этот case получает исходное интерфейсное значение:"
+    "В этом примере в случае case bool после того как мы уже точно узнали, что динамический тип x равен bool, мы провели операцию type assertion, чтобы получить значение типа bool(в операторе if можно использовать только такие значения). Оператор type switch позволяет выполнить это действие один раз в самом начале и в каждом case'е операнд будет иметь такой тип, который используется в этом case'e. Но здесь есть и исключение: когда в case'е указано несколько типов, то этот case получает исходное интерфейсное значение:"
    ]
   },
   {
