--- a/08.Горутины и каналы/02.Каналы.ipynb
+++ b/08.Горутины и каналы/02.Каналы.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Это общий вид выражения select. Как и у switch'а, у него есть несколько ветвей выполнения и случай по-умолчанию defautl. Каждая ветвь представляет собой взаимодействие(communication), т.е. отправку или получение и блок кода, который нужно выполнить в этом случае. Операция получения может просто извлечь значение из канала или может присвоить его переменной, чтобы в дальнейшем можно было ссылаться на неё.\n",
+    "Это общий вид выражения select. Как и у switch'а, у него есть несколько ветвей выполнения и случай по-умолчанию default. Каждая ветвь представляет собой взаимодействие(communication), т.е. отправку или получение и блок кода, который нужно выполнить в этом случае. Операция получения может просто извлечь значение из канала или может присвоить его переменной, чтобы в дальнейшем можно было ссылаться на неё.\n",
     "\n",
     "select **ждёт** пока можно будет выполнить взаимодействие для какой-либо ветви, а затем выполняет это взаимодействие и при этом не будут выполнены взаимодействия в других ветвях. select без каких-либо ветвей, т.е. select{}, будет ждать бесконечно долго.\n",
     "\n",
