--- a/10.Пакеты и go tool/02.Команда go.ipynb
+++ b/10.Пакеты и go tool/02.Команда go.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Команда **go build** компилирует каждый переданный её в аргументах пакет. При этом, если пакет является библиотекой, то результат сразу удаляется, т.е. в этом случае проверяется, что в пакете нет ошибок. Если  же пакет называется main, то go build запускает компоновщик(linker) для того чтобы создать запускаемый файл в текущей папке. Запускаем файл получает имя из последнего сегмента пути импортирования пакета. Т.к. одна папка может содержать только один пакет, каждая запускаемая программа требует своей собственной папки.\n",
+    "Команда **go build** компилирует каждый переданный ей пакет. При этом, если пакет является библиотекой, то результат сразу удаляется, т.е. в этом случае проверяется, что в пакете нет ошибок. Если  же пакет называется main, то go build запускает компоновщик(linker) для того чтобы создать запускаемый файл в текущей папке. Запускаем файл получает имя из последнего сегмента пути импортирования пакета. Т.к. одна папка может содержать только один пакет, каждая запускаемая программа требует своей собственной папки.\n",
     "\n",
     "По-умолчанию go build собирает переданные ей пакеты, а также все их зависимости, а затем удаляет весь скомпилированный код за исключением запускаемого файла, если таковой вообще есть. С увеличением количества пакетов необходимых для сборки программы возрастает и время сборки программы. Чтобы каждый раз не собирать неизменившиеся пакеты можно воспользоваться командой go install. Скомпилированные пакеты сохраняются в папке $GOPATH/pkg.\n",
     "\n",
