--- a/11.Тестирование/01.Тестирование.ipynb
+++ b/11.Тестирование/01.Тестирование.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Команда go test используется в Go для проведения тестов. В папке пакета файлы, которые оканчиваются на **\\_test.go** не включаются в сборку при использовании команды go build. Эти файлы содержат тестировочный код, который будет включен в сборку пакета при вызове команды go test.\n",
+    "Команда go test используется в Go для проведения тестов. В папке пакета файлы, которые оканчиваются на **\\_test.go**, не включаются в сборку при использовании команды go build. Эти файлы содержат тестировочный код, который будет включен в сборку пакета при вызове команды go test.\n",
     "\n",
     "Внутри \\*\\_test.go файлов находятся **три вида** функций:\n",
     "1. Функции для проведения тестирования. Тестовые функции(test function) начинаются на **Test** и проверяют некоторую часть программы на правильную работу; go test вызывает эти функции и выводит результат: PASS или FAIL.\n",
