--- a/04.Составные типы данных/02.Слайсы.ipynb
+++ b/04.Составные типы данных/02.Слайсы.ipynb
@@ -102,6 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[7 7 7]\n",
       "[9 9 9 9]\n"
      ]
     }
@@ -115,12 +116,12 @@
     "\n",
     "nums := []int{1, 2, 3}\n",
     "setAll(nums, 7)\n",
-    "fmt.Sprint(nums)\n",
+    "fmt.Println(nums)\n",
     "\n",
     "// Создаём массив.\n",
     "array := [...]int{0, 1, 2, 3}\n",
     "// Операция получения слайса применима и к массиву. В этом случае создаётся\n",
-    "// слайс, базовым массивом которого является указанный слайс.\n",
+    "// слайс, базовым массивом которого является указанный массив.\n",
     "setAll(array[:], 9)\n",
     "fmt.Sprint(array)"
    ]
